Vue and TailWind CSS

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     container_name: ${COMPOSE_PROJECT_NAME}_laravel_app
     ports:
       - "8001:8000"   # Laravel's default port mapped to 8081 on the host
+      - "5173:5173"   # Vite port
     environment:
       APP_ENV: local
       APP_KEY: ${APP_KEY}   # Make sure to set a key (run `php artisan key:generate`)
